# newsletter_generate

./: .gitignore  .mcp.json  20250725ふらっと学校説明会文字起こし.txt  DEVELOPMENT_ROADMAP.md  Makefile  README.md  README_IMPROVED.md  calendar_service.py  condition_clean.json  config.py  data_loader.py  health_knowledge_rag.py  lunar_impact_data.json  main.py  newsletter_generator.py  packages.txt  pressure_impact_data.json  pyproject.toml  requirements.txt  run_local.sh  streamlit_app.py  streamlit_secrets_config.txt  test_rag_system.py  ui.py  utils.py  weather_api_documentation.md  weather_service.py  web_loader.py  youtube_service.py  学校紹介コメント作成アイデア総括.md
.serena/: project.yml
.serena/cache/python/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: code_style_conventions.md  development_context.md  project_overview.md  project_structure.md  suggested_commands.md  task_completion_checklist.md  tech_stack.md
data/: event2025.csv  schedule2025.csv
src/core/: config_manager.py
src/ui/: base_controller.py  content_controller.py  main_controller.py  sidebar_controller.py
src/utils/: __init__.py  cache_manager.py  logging_config.py  moon_phase_calculator.py
tests/: test_cache_manager.py  test_config_manager.py  test_moon_phase_calculator.py
